[project]
name = "port-scanner"
version = "0.1.2"
authors = [{ name="batubyte" }]
description = "An enhanced Nmap wrapper"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = ["rich", "requests"]

[project.scripts]
port-scanner = "port_scanner:main"

[project.urls]
Homepage = "https://github.com/batubyte/port-scanner"
